--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
@@ -24,8 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "stylelint": "stylelint \"**/*.{css,scss}\"",
-    "eslint": "eslint ."
+    "stylelint": "stylelint \"**/*.{css,scss}\""
   },
   "eslintConfig": {
     "extends": [
